--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,10 @@ h1 {
     margin-bottom: 20px;
 }
 
+.alert-group {
+    margin-bottom: 40px;
+}
+
 .alert {
     padding: 12px 15px;
     border-radius: 5px;
@@ -64,6 +68,10 @@ h1 {
 .form-group {
     display: flex;
     flex-direction: column;
+    margin-top: 18px;
+}
+
+.field-group {
     margin-top: 18px;
 }
 
@@ -228,7 +236,7 @@ a {
     padding: 0.75rem;
     border-radius: 4px;
     border-left: 3px solid #ffc107;
-    margin: 12px 0;
+    margin: 24px 0;
 }
 
 .note.blue {
